# vccfcoords

./: .gitignore  README.md  environment.yml  setup.cfg
.github/workflows/: CI.yaml
notebooks/: vccf_coords_nb.ipynb
tests/: test_imports.py  test_solvers.py
vccfcoords/: __init__.py  simulation.py  solvers.py  utils.py
