[metadata]
name = vccfcoords

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit notebooks folder
    */notebooks/*/


[options]
packages=find:

#package_dir=
#  =vccfcoords
#packages=find:
#[options.packages.find]
#where=vccfcoords
 
[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 119
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 119

[aliases]
test = pytest
